<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_hint"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_round_tune_24"
        android:title="@string/setting"
        app:showAsAction="always"/>

    <item
        android:id="@+id/export"
        android:icon="@drawable/ic_export2"
        android:title="@string/export_hint"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share_hint"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_round_bookmark_border_24"
        android:title="@string/bookmark_add_hint"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_round_help_outline_24"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>


</menu>