<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                style="@style/MaterialAlertDialog.App.Title.Text"
                android:text="@string/export_hint"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/file_type_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/file_type_hint">

                <AutoCompleteTextView
                    android:id="@+id/text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/frame_button"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                app:layout_constraintTop_toBottomOf="@id/file_type_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:singleSelection="true"
                app:selectionRequired="true">
                <Button
                    android:id="@+id/frame_button1"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    app:icon="@drawable/frame0_1"
                    app:iconSize="48dp"
                    app:iconTint="@null"/>
                <Button
                    android:id="@+id/frame_button2"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    app:icon="@drawable/frame1_1"
                    app:iconSize="48dp"
                    app:iconTint="@null"/>
                <Button
                    android:id="@+id/frame_button3"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    app:icon="@drawable/frame2_1"
                    app:iconSize="48dp"
                    app:iconTint="@null"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <ImageView
                android:id="@+id/width_low"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/slider"
                app:layout_constraintBottom_toBottomOf="@id/slider"
                android:layout_marginStart="24dp"
                app:srcCompat="@drawable/ic_width"/>
            <ImageView
                android:id="@+id/width_high"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/slider"
                app:layout_constraintBottom_toBottomOf="@id/slider"
                android:layout_marginEnd="24dp"
                app:srcCompat="@drawable/ic_width"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/width_low"
                app:layout_constraintEnd_toStartOf="@id/width_high"
                app:layout_constraintTop_toBottomOf="@id/frame_button"
                android:layout_marginTop="16dp"
                android:valueFrom="800"
                android:valueTo="3000"
                android:stepSize="100" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_result_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                app:layout_constraintTop_toBottomOf="@id/slider"
                android:text="@string/view_result"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/show_result_switch"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/export_poem_pos_button"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/show_result_switch"
                app:layout_constraintStart_toEndOf="@id/save_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/cancel"
                android:textSize="16sp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</FrameLayout>